--- a/templates/404.html
+++ b/templates/404.html
@@ -13,7 +13,7 @@
             <h2>ERROR - 404: Page Not Found!</h2>
         </div>
         <div class="col-12 text-center">
-            <h4 class="my-3">Sometimes, life just isn't sensical!</h4>
+            <h4 class="my-3">Sometimes, life just isn't Jasmine Boutique!</h4>
             <p class="mb-4" >Click the link below to return home... </p>
             <a class="sensical-button  sensical-button-border" href="{% url 'home' %}">Home</a>
         </div>
