--- a/packages/templates/packages/custom_packages.html
+++ b/packages/templates/packages/custom_packages.html
@@ -73,7 +73,7 @@
             </p>
             <br>
             <p>Please login or <a href="{% url 'home' %}" class="sensical-button">Click Here</a> to visit the
-                Sensical.ie Home page</p>
+                Jasmine.ie Home page</p>
         </div>
     </div>
 
