--- a/packages/templates/packages/packages_confirm_delete.html
+++ b/packages/templates/packages/packages_confirm_delete.html
@@ -62,7 +62,7 @@
             <br>
             
         
-        <p>Please login or <a href="{% url 'home' %}" class="sensical-button">Click Here</a> to visit the Sensical.ie Home page</p>     
+        <p>Please login or <a href="{% url 'home' %}" class="sensical-button">Click Here</a> to visit the Jasmine.ie Home page</p>     
     </div>
 </div>
 
