--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,7 @@
     {% block extra_js %}
     {% endblock extra_js %}
 
-    <title>Sensical.ie {% block extra_title %}{% endblock extra_title %}</title>
+    <title>Jasmine.ie {% block extra_title %}{% endblock extra_title %}</title>
 
 </head>
 
@@ -74,18 +74,18 @@
             <div id="top-nav" class="row bg-white pt-lg-1 d-none d-lg-flex">
 
                 <div class="col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
-                    <a href="{% url 'home' %}" title="Sensical.ie">
+                    <a href="{% url 'home' %}" title="Jasmine.ie">
                         <img id="nav-logo"
                             src="https://res.cloudinary.com/djck2eqxo/image/upload/v1677326734/sensical/sensical_webp/topnav_logo_uy2ymj.webp"
-                            alt="Sensical.ie" width="500"  height="190">
-                        <span class="sr-only">Sensical.ie</span>
+                            alt="Jasmine.ie" width="500"  height="190">
+                        <span class="sr-only">Jasmine.ie</span>
                     </a>
                 </div>
 
                 <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
                     <form method="GET" action="{% url 'products' %}">
                         <div class="input-group w-100">
-                            <input class="form-control border" type="search" name="q" placeholder="Search Sensical.ie"
+                            <input class="form-control border" type="search" name="q" placeholder="Search Jasmine.ie"
                                 aria-label="Search">
                             <div class="input-group-append">
                                 <button class="form-control btn" type="submit" aria-label="search">
