--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -11,7 +11,7 @@
                     <div>
                         <img width="400"  height="360" class="footer-inv-logo"
                             src="https://res.cloudinary.com/djck2eqxo/image/upload/v1677334355/sensical/sensical_webp/footer_invert_i5olyl_nhdcph.webp"
-                            alt="inverted sensical logo">
+                            alt="inverted jasmine logo">
                     </div>
 
                     <div class="footer-contact-text">
@@ -30,7 +30,7 @@
                         <a class="footer-social-icon" rel="external nofollow noopener" href="https://twitter.com/"
                             target="_blank" aria-label="Twitter" title="Twitter"><i class="fa-brands fa-twitter"
                                 aria-hidden="true"></i></a>
-                        <a class="footer-social-icon" href="mailto:sensical.ireland@gmail.com" target="_blank"
+                        <a class="footer-social-icon" href="mailto:jasmine.ireland@gmail.com" target="_blank"
                             aria-label="Email" title="Email"><i class="fa-solid fa-envelope" aria-hidden="true"></i></a>
                     </div>
                 </div>
