--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -25,19 +25,19 @@
 </li>
 <li class="list-inline-item d-lg-none">
     <div class="logo-container" >
-        <a href="{% url 'home' %}" title="Sensical.ie">
+        <a href="{% url 'home' %}" title="Jasmine.ie">
             <img width=642 height=206 id="mobile-nav-logo"
                 src="https://res.cloudinary.com/djck2eqxo/image/upload/v1677334571/sensical/sensical_webp/sensical_mobile_inverted_nav_gsdlry_pnqifa.webp"
-                alt="Sensical.">
-            <span class="sr-only">Sensical.ie</span>
+                alt="Jasmine.">
+            <span class="sr-only">Jasmine.ie</span>
         </a>
     </div>
     <div class="logo-container-xs">
-        <a href="{% url 'home' %}" title="Sensical.ie">
+        <a href="{% url 'home' %}" title="Jasmine.ie">
             <img width=163 height=167 id="mobile-nav-xs"
                 src="https://res.cloudinary.com/djck2eqxo/image/upload/v1677334668/sensical/sensical_webp/mobile_nav_xs_p86xyq_ovdekb.webp"
-                alt="Sensical.ie">
-            <span class="sr-only">Sensical.ie</span>
+                alt="Jasmine.ie">
+            <span class="sr-only">Jasmine.ie</span>
         </a>
     </div>
 </li>
@@ -80,7 +80,7 @@
     <form class="form" method="GET" action="{% url 'products' %}">
         <div class="input-group w-100">
             <input class="form-control border border-black rounded-0" type="text" name="q"
-                placeholder="Search Sensical.ie">
+                placeholder="Search Jasmine.ie">
             <div class="input-group-append">
                 <button class="form-control form-control btn btn-black border border-black rounded-0" type="submit" aria-label="Search">
                     <span class="icon">
