--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -54,9 +54,9 @@
                     src="https://res.cloudinary.com/djck2eqxo/image/upload/v1677334571/sensical/sensical_webp/sensical_mobile_inverted_nav_gsdlry_pnqifa.webp"
                     alt="About page hero image">
                 <hr class="about-logo-rule">
-                <p>Sensical Multi-Sensory Solutions is a Sensory equipment provision service operating in the North
+                <p>Jasmine Multi-Sensory Solutions is a Sensory equipment provision service operating in the North
                     East of Ireland.</p>
-                <p>Sensical, can create a pop-up style sensory room in virtually any small to medium-sized space in a
+                <p>Jasmine, can create a pop-up style sensory room in virtually any small to medium-sized space in a
                     matter of minutes.</p>
                 <p>Our Irish-owned, family-run, business has been in operation since 2018. As the company continues to
                     grow, 2023 will see further expansion with the introduction of our sensory equipment webstore.</p>
@@ -81,7 +81,7 @@
             <div class="media-width p-2">
                 <img class="about-img"
                     src="https://res.cloudinary.com/djck2eqxo/image/upload/v1676816007/sensical/IMG_7957_yplk6m.jpg"
-                    alt="A screenshot of the sensical.ie webstore">
+                    alt="A screenshot of the jasmine.ie webstore">
             </div>
         </div>
     </div>
@@ -99,7 +99,7 @@
                 <h3>Equipment Hire</h3>
                 <hr class="about-logo-rule">
                 <p class="mt-5">The cornerstone of our business and the foundation for everything we do here at
-                    Sensical, Our Mobile Sensory Environments service
+                    Jasmine, Our Mobile Sensory Environments service
                     provides our customers with access to industry-standard sensory equipment at a reasonable price. Our
                     Compact, portable systems can create stunning, atmospheric, sensory environments in almost any small
                     to medium-sized space.</p>
@@ -119,8 +119,8 @@
             class="fa-brands fa-twitter"></i></a>
     <img class="contacts-logo"
         src="https://res.cloudinary.com/djck2eqxo/image/upload/v1673384957/sensical/mobile_nav_xs_p86xyq.png"
-        alt="sensical logo">
-    <a class="about-social-icon" href="mailto:info@sensical.ie" target="_blank" aria-label="email"><i
+        alt="jasmine logo">
+    <a class="about-social-icon" href="mailto:info@jasmine.ie" target="_blank" aria-label="email"><i
             class="fa-solid fa-envelope"></i></a>
     <a class="about-social-icon" href="tel:+042-322-3646" target="_blank" aria-label="phone"><i
             class="fa-solid fa-square-phone"></i></a>
